<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="top"
    tools:context=".IndexActivity" >
    
        <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#F78388"
        >

        <TextView
            android:id="@+id/txtSignUpNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#DC5c09"
            android:textSize="32sp"
            android:text="@string/SignIn" />

    </RelativeLayout>

    <TableRow
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <TextView
            android:id="@+id/lblMessageEditorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeActionLabel="Next"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/row2"
         android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblMessageEditorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeActionLabel="Next"
            android:inputType="numberPassword" />

    </TableRow>
    
        <TableRow
        android:id="@+id/row3"
         android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnClear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignIn" />

    </TableRow>
    
        <TableRow
        android:id="@+id/row4"
         android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

       

    </TableRow>
    
   <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        >

	 <TextView
	     android:id="@+id/login_error"
	     style="@style/loginError"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:textAppearance="?android:attr/textAppearanceLarge"
	     android:textColor="#99112F" />
        
	<TextView
	    android:id="@+id/txtSignupLink"
	    android:gravity="center"
	    android:layout_marginTop="30dp"
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:textColor="#8C38a8"
	    android:text="@string/newUser"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    />
   
      </RelativeLayout>

</TableLayout>