<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactActivity" >

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill" >

        <LinearLayout
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/btnRefresh"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/action_refresh"
                android:src="@android:drawable/ic_menu_rotate" />

            <ImageButton
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/action_exit"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <ImageButton
                android:id="@+id/btnAddFriends"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/add_friend"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>
    </HorizontalScrollView>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>