<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="top"
    tools:context=".SignUpActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#F78388"
        >

        <TextView
            android:id="@+id/txtSignUpNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#DC5c09"
            android:textSize="32sp"
            android:text="@string/SignUp" />

    </RelativeLayout>
    
    <TableRow
        android:id="@+id/row1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/lblMessageEditorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name" />

        <EditText
            android:id="@+id/registerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/row2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/lblMessageEditorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </TableRow>

    <TableRow
        android:id="@+id/row3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/lblMessageEditorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/password" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword" />

    </TableRow>

    <TableRow
        android:id="@+id/row4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

       <Button
            android:id="@+id/btnClear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
        
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp" />

    </TableRow>
   <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

         <TextView
             android:id="@+id/register_error"
             style="@style/loginError"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#99112F" />

       <ImageView
           android:id="@+id/imgFooter"
           android:layout_centerInParent="true"
           android:layout_width="120dp"
           android:layout_height="120dp"
           android:layout_below="@+id/register_error"
           android:contentDescription="@string/SignUp"
           android:src="@drawable/splash_screen_img" />
      
      </RelativeLayout>

</TableLayout>
</ScrollView>